<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="statistics">Statistics</string>
    <string name="all_transactions">All Transactions</string>
    <string name="income_by_category">Income by Category</string>
    <string name="expenses_by_category">Expenses by Category</string>
    <string name="settings">Settings</string>
    <string name="currency_settings">Currency Settings</string>
    <string name="select_your_preferred_currency_for_all_transactions">Select your preferred currency for all transactions</string>
    <string name="select_currency">Select Currency</string>
    <string name="this_will_affect_how_all_amounts_are_displayed_throughout_the_app">This will affect how all amounts are displayed throughout the app</string>
    <string name="data_management">Data Management</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="app_information">App Information</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="_2025_owner">© Ranjeet Kumar</string>
    <string name="logout">Logout</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="enter_monthly_budget">Enter Monthly Budget</string>
    <string name="save_budget">Save Budget</string>
    <string name="budget_progress">Budget Progress</string>
    <string name="monthly_budget_0_00">Monthly Budget: $0.00</string>
    <string name="spent_0_00">Spent: $0.00</string>
    <string name="remaining_0_00">Remaining: $0.00</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="money_saving">Expense Tracker</string>
    <string name="apr_2025">Apr 2025</string>
    <string name="total_balance">Total balance</string>
    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="_500">500$</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
</resources>